<resources>
    <string name="app_name">Hitrash</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="hikingGroup">Hiking Group</string>
    <string name="hikingTrail">Hiking Trails</string>
    <string name="clean">Clean</string>
    <string name="userList">User List</string>
    <string name="manageHikingTrail">Manage Hiking Trails</string>
    <string name="cleaningClaims">Cleaning Claims</string>
    <string name="titleHikingTrails">Hiking Trails</string>
    <string name="nameLabel">Name:</string>
    <string name="hardnessLabel">Hardness</string>
    <string name="hardnessType_Prompt">Choose hardness ...</string>
    <string name="provinceLabel">Province:</string>
    <string name="distanceLabel">Distance:</string>
    <string name="signalize">Signalized</string>
    <string name="informationOffice">Information Office</string>
    <string name="guide">Guide</string>
    <string name="startRoute">Start Route</string>
    <string name="claimLabel">Claim</string>
    <string name="groupNameLabel">Group Name:</string>
    <string name="groupDescriptionLabel">Description:</string>

    <string-array name="hardnessType">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="calendar_date_picker_result_values">%1$s/%2$s/%3$s</string>
    <string name="time_picker_result_value">%1$s:%2$s</string>
    <string name="newGroupTitle">Create New Group</string>
    <string name="profile">Profile</string>
    <string name="add_image">Add Image</string>
    <string name="errorParseObject">Error, data cannot parse in Object</string>
    <string name="errorLogin">Error, username or password is invalid. Also, is posible that your account is inactive.</string>
    <string name="errorRequest">Error, request failed</string>
    <string name="userUpdated">Updated user</string>
    <string name="userNotUpdated">Error, User not updated</string>
    <string name="errorInsertObject">Error, object not inserted</string>
    <string name="commentUpdate">Comment updated</string>
    <string name="hikingTrailNotUpdated">Error, Hiking Trail not updated</string>
    <string name="groupCreated">Group has been created</string>
    <string name="hikingTrailCreated">Hiking Train has been created</string>
    <string name="hikingTrailUpdated">Hiking Trails has been updated</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBHvXkAEH2ay2bkevQt01Z0bqjT5dXkFcw</string>
    <string name="notImplemented">This functionality is not implemented</string>
    <string name="restoreClaims">The claims of this hiking trails have been restored</string>
    <string name="latitud">Lat:</string>
    <string name="longitud">Long:</string>
    <string name="km">km</string>
</resources>
