<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalAdminActivity">

    <Button
        android:id="@+id/buttonExitAdmin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:background="@mipmap/ic_exit_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logoPrincipalAdmin"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoPrincipalAdmin"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonUserList"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@mipmap/ic_group_foreground"
        android:gravity="bottom|center"
        android:text="@string/userList"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPrincipalAdmin" />

    <Button
        android:id="@+id/buttonManageHikingTrails"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:background="@mipmap/ic_hiking_trail_foreground"
        android:gravity="bottom|center"
        android:text="@string/manageHikingTrail"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPrincipalAdmin" />

    <Button
        android:id="@+id/buttonCleaningClaims"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:background="@mipmap/ic_clean_foreground"
        android:gravity="bottom|center"
        android:text="@string/cleaningClaims"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonManageHikingTrails"
        app:layout_constraintStart_toEndOf="@+id/buttonUserList"
        app:layout_constraintTop_toBottomOf="@+id/logoPrincipalAdmin" />

</android.support.constraint.ConstraintLayout>