<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalUserActivity">

    <Button
        android:id="@+id/buttonProfilePrincipal"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_login"
        app:layout_constraintEnd_toStartOf="@+id/logoPrincipal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logoPrincipal"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoPrincipal"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonHikingGroup"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_goup"
        android:gravity="bottom|center"
        android:text="@string/hikingGroup"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPrincipal" />

    <Button
        android:id="@+id/buttonHikingTrails"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_hiking_trail"
        android:gravity="bottom|center"
        android:text="@string/hikingTrail"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPrincipal" />

    <Button
        android:id="@+id/buttonClean"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_clean"
        android:gravity="bottom|center"
        android:text="@string/clean"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonHikingTrails"
        app:layout_constraintStart_toEndOf="@+id/buttonHikingGroup"
        app:layout_constraintTop_toBottomOf="@+id/logoPrincipal" />

</android.support.constraint.ConstraintLayout>